# TroublesomeSpace-Nibble

./: CMakeLists.txt  GameInfo.hpp  Nibble_New.ino  TroublesomeSpace.ino
melody/: LoopMelody.h  Melodies.h  Melody.cpp  Melody.h
src/: Audio.h  EnterHighscoreState.cpp  EnterHighscoreState.h  EraseHighscoreState.cpp  EraseHighscoreState.h  Game.cpp  Game.h  GameInfoState.cpp  GameInfoState.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  Highscore.cpp  Highscore.h  Melody.h  Menu.cpp  Menu.h  ShowHighscoreState.cpp  ShowHighscoreState.h  State.cpp  State.h  melody.h  pitches.h
src/Highscore/: Highscore.cpp  Highscore.h
src/Melody/: GameOverMelody.h  LoopMelody.h  Melodies.h  Melody.cpp  Melody.h  MenuMelody.h  Note.h  Pitches.h  StartUpMelody.h
src/Particles/: Particle.cpp  Particle.h  ParticleEngine.cpp  ParticleEngine.h
src/bitmaps/: TS_greenFlag.hpp  alien1.hpp  alien2.hpp  aliens.hpp  fuel.hpp  gameover.hpp  planets.hpp  player.hpp  redFlag.hpp
src/bitmaps/aliens/: TS_alien4.hpp  TS_alien5.hpp  TS_alien6.hpp  TS_alienShip2.hpp  TS_alienShip3.hpp  TS_alienShip4.hpp  TS_alienShip5.hpp  alien1.hpp  alien3.hpp  alien5.hpp  alienShip1.hpp  alienShip2.hpp  alienShip3.hpp  alienShip4.hpp  alienShip5.hpp
src/bitmaps/igniteHighFrames/: TS_igniteHighPlayer1.hpp  TS_igniteHighPlayer2.hpp  TS_igniteHighPlayer3.hpp  igniteHighPlayer4.hpp  igniteHighPlayer5.hpp
src/bitmaps/igniteLowFrames/: TS_igniteLowPlayer1.hpp  TS_igniteLowPlayer2.hpp  TS_igniteLowPlayer3.hpp  TS_igniteLowPlayer4.hpp
src/bitmaps/launcherIcon/: TS_icon.hpp
src/bitmaps/objects/: ore.hpp
src/bitmaps/planets/: TS_planet2.hpp  TS_planet3.hpp  TS_planet6.hpp  TS_planet8.hpp  TS_planet9.hpp  planet1.hpp  planet10.hpp  planet4.hpp  planet5.hpp  planet7.hpp
src/bitmaps/player/: TS_invisiblePlayer.hpp
src/bitmaps/states/: TS_eraseHighscoreStateScreen.hpp  background.hpp  gameStateBackground.hpp  highscore.hpp  homescreen.hpp  pauseScreen.hpp
src/bitmaps/tiltedPlayer/ignition/: TS_ignitionTiltLeft1.hpp  TS_ignitionTiltLeft2.hpp  TS_ignitionTiltLeft3.hpp  TS_ignitionTiltRight1.hpp  TS_ignitionTiltRight2.hpp  ignitionTiltRight3.hpp
src/bitmaps/tiltedPlayer/invisiblePlayer/: TS_invTiltLeft.hpp  invTiltRight.hpp
src/bitmaps/tiltedPlayer/player/: TS_playerTiltLeft1.hpp  TS_playerTiltLeft2.hpp  TS_playerTiltLeft3.hpp  TS_playerTiltRight1.hpp  playerTiltRight2.hpp  playerTiltRight3.hpp
src/melody/: GameOverMelody.h  LoopMelody.h  Melodies.h  Melody.cpp  Melody.h  VictoryMelody.h
